--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "new-rajshree-sweets-menu",
   "version": "0.1.0",
   "homepage": "https://New-Rajshree-Sweets-Private-Limited.github.io/new-rajshree-sweets-menu",
+  "main": "index.jsx",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
