--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "new-rajshree-sweets-menu",
   "version": "0.1.0",
-  "homepage": "https://menu.newrajshreesweets.com/",
+  "homepage": "https://menu.newrajshreesweets.com",
   "main": "index.jsx",
   "private": true,
   "dependencies": {
